# LearnModernOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
FrameworkOpenGL/: CMakeLists.txt  framework_post_build.py  framework_pre_build.py
FrameworkOpenGL/include/: Action.h  ColoredTriangle.h  GladConfig.h  ISolidObject.h  ShaderFileReader.h  ShaderProgram.h  TexturedReactangle.h  Triangle.h
FrameworkOpenGL/include/actions/: Action.h
FrameworkOpenGL/include/config/: GladConfig.h  GlfwConfig.h  GlfwWindowManager.h
FrameworkOpenGL/include/entities/: ColoredTriangle.h  Object.h  Texture.h  TextureObject.h  TexturedReactangle.h  Triangle.h  Vertices.h
FrameworkOpenGL/shaders/fragment/: simpleTexture.frag  simplestFragment.frag  uniformFragment.frag
FrameworkOpenGL/shaders/vertex/: colorVertex.vert  simpleTexture.vert
FrameworkOpenGL/src/: ColoredTriangle.cpp  GlfwConfig.cpp  GlfwWindowManager.cpp  ShaderFileReader.cpp  ShaderProgram.cpp  TexturedReactangle.cpp  Triangle.cpp  main.cpp
FrameworkOpenGL/src/Config/: GladConfig.cpp  GlfwConfig.cpp  GlfwWindowManager.cpp
FrameworkOpenGL/src/Entities/: ColoredTriangle.cpp  ShaderFileReader.cpp  ShaderProgram.cpp  Texture.cpp  TextureObject.cpp  TexturedReactangle.cpp  Triangle.cpp
Tests/: CMakeLists.txt  tests_post_build.py  tests_pre_build.py
Tests/include/: EndToEndTests.h
Tests/src/: ColoredTriangleTest.cpp  EndToEnd.cpp  GradientTriangleWithUniformTest.cpp  ShaderFileReaderTest.cpp  TextureReactangleTest.cpp  exampleTest.cpp  main.cpp
